<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<TextView android:layout_width="0dip"
			android:layout_height="wrap_content" 
			android:text="@string/writer" 
			android:layout_weight="1"/>
			
		<EditText android:id="@+id/writer" 
		  android:layout_width="0dip"
			android:layout_height="wrap_content" 
			android:layout_weight="5"/>
	</LinearLayout>

	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:layout_marginTop="8dip"
		android:layout_marginBottom="4dip">

		<TextView android:layout_width="0dip"
			android:layout_height="wrap_content" 
			android:text="@string/latitude" 
			android:layout_weight="1"/>
			
		<TextView android:id="@+id/latitude" 
			android:layout_width="0dip"
			android:layout_height="wrap_content" 
			android:layout_weight="5"/>
	</LinearLayout>
	
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="4dip"
		android:layout_marginBottom="8dip">

		<TextView android:layout_width="0dip"
			android:layout_height="wrap_content" 
			android:text="@string/address" 
			android:layout_weight="1"/>
			
		<TextView android:id="@+id/address" 
		  	android:layout_width="0dip"
			android:layout_height="wrap_content" 
			android:layout_weight="5"/>
	</LinearLayout>
	
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/body" />
		
	<EditText android:id="@+id/body" android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:scrollbars="vertical" 
		android:lines="5" android:gravity="top" />
	
	<Button android:id="@+id/confirm" 
	  android:text="@string/confirm"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:layout_gravity="right" 
		android:layout_marginLeft="16dip"
		android:layout_marginRight="16dip" 
		android:paddingLeft="26dip"
		android:paddingRight="26dip"/>

</LinearLayout>